<resources>
    <string name="app_name">Persona Creator</string>
    <string name="mainFrameTitle">作成したペルソナ一覧</string>
    <string name="createBtStr">新規ペルソナ作成</string>

    <string name="personaName">ペルソナの名前を入力してください：</string>
    <string name="personaAge">年齢：</string>
    <string name="personaGender">性別：</string>
    <string name="personaAffiliation">所属：</string>
    <string name="personaHeight">身長：</string>
    <string name="personaWeight">体重：</string>
    <string name="mainBackBtStr">メイン画面へ戻る</string>
    <string name="addEditBt">変数追加</string>
    <string name="Geography">地理的変数</string>
    <string name="Population">人口動態変数</string>
    <string name="Psychology">心理的変数</string>
    <string name="Action">行動変数</string>
</resources>